# reflekt

./: .bumpversion.cfg  .coveragerc  .envrc  .flake8  .gitignore  CHANGELOG.md  License.md  Makefile  README.md  README_BACKUP.md  README_v2.md  environment.yml  mypy.ini  pyproject.toml  pytest.ini  reflekt_project.yml  requirements-dev.txt
.github/workflows/: ci.yml  pre_release.yml  pull_request.yml  release.yml  test.yml
.reuse/: README.md  dep5
LICENSES/: README.md
artifacts/dbt/jaffle_shop/: .gitignore  README.md  dbt_project.yml
artifacts/dbt/reflekt_demo/: README.md  dbt_project.yml
dbt_packages/reflekt_buoyweather_web/: README.md  dbt_project.yml
dbt_packages/reflekt_buoyweather_web/models/: stg_buoyweather_web__account_created.sql  stg_buoyweather_web__added_card.sql  stg_buoyweather_web__added_product.sql  stg_buoyweather_web__cancelled_free_trial.sql  stg_buoyweather_web__cancelled_subscription.sql  stg_buoyweather_web__changed_subscription_plan.sql  stg_buoyweather_web__clicked_add_credit_debit_card.sql  stg_buoyweather_web__clicked_add_favorite.sql  stg_buoyweather_web__clicked_cancel_your_subscription.sql  stg_buoyweather_web__clicked_create_account.sql  stg_buoyweather_web__clicked_edit_profile.sql  stg_buoyweather_web__clicked_embed.sql  stg_buoyweather_web__clicked_link.sql  stg_buoyweather_web__clicked_no_thanks.sql  stg_buoyweather_web__clicked_promotion.sql  stg_buoyweather_web__clicked_renew_subscription.sql  stg_buoyweather_web__clicked_save.sql  stg_buoyweather_web__clicked_sign_in.sql  stg_buoyweather_web__clicked_subscribe_cta.sql  stg_buoyweather_web__clicked_update_password.sql  stg_buoyweather_web__clicked_view_map.sql  stg_buoyweather_web__completed_checkout_step.sql  stg_buoyweather_web__completed_order.sql  stg_buoyweather_web__continued_to_cancel.sql  stg_buoyweather_web__converted_free_trial.sql  stg_buoyweather_web__converted_to_paid.sql  stg_buoyweather_web__create_account_form_clicked_sign_in.sql  stg_buoyweather_web__days_to_convert_from_trial.sql  stg_buoyweather_web__deleted_account.sql  stg_buoyweather_web__dissociated_stripe_customer.sql  stg_buoyweather_web__expired_subscription.sql  stg_buoyweather_web__extended_subscription.sql  stg_buoyweather_web__failed_payment.sql  stg_buoyweather_web__failed_payment_recovered.sql  stg_buoyweather_web__generated_gift_card.sql  stg_buoyweather_web__identifies.sql  stg_buoyweather_web__invalid_forgot_password_reset_code.sql  stg_buoyweather_web__kept_account.sql  stg_buoyweather_web__pages.sql  stg_buoyweather_web__printed_written_forecast.sql  (+20 more)
dbt_packages/reflekt_my_app_web/: README.md  dbt_project.yml
dbt_packages/reflekt_my_app_web/models/: reflekt_my_app_web__account_created.sql  reflekt_my_app_web__account_deleted.sql  reflekt_my_app_web__checkout_step_viewed.sql  reflekt_my_app_web__order_completed.sql  reflekt_my_app_web__pages.sql  reflekt_my_app_web__product_added.sql  reflekt_my_app_web__tracks.sql
dbt_packages/reflekt_surfline_web/: README.md  dbt_project.yml
dbt_packages/reflekt_surfline_web/models/: _src_surfline_web.yml  _stg_surfline_web__accepted_subscription_offer.yml  _stg_surfline_web__account_created.yml  _stg_surfline_web__added_card.yml  _stg_surfline_web__added_product.yml  _stg_surfline_web__added_session.yml  _stg_surfline_web__booking_completed.yml  _stg_surfline_web__cancelled_free_trial.yml  _stg_surfline_web__cancelled_subscription.yml  _stg_surfline_web__carousel_clicked.yml  _stg_surfline_web__changed_cam_selection.yml  _stg_surfline_web__changed_home_cam.yml  _stg_surfline_web__clicked_cam_rewind.yml  (+242 more)
docs/: AVO.md  COMMANDS.md  CONTRIBUTING-CODE.md  CONTRIBUTING.md  DOCUMENTATION.md  INSTALL-SETUP.md  INTEGRATIONS.md  TRACKING-PLANS-AS-CODE.md  reflekt-with-avo.md
reflekt/: __init__.py  api_handler.py  casing.py  cli.py  columns.py  config.py  constants.py  dbt.py  documenter.py  dumper.py  errors.py  event.py  flatson.py  linter.py  loader.py  logger.py  plan.py  profile.py  project.py  property.py  reporter.py  schema.py  tracking.py  trait.py  transformer.py  transformer_old.py  utils.py  warehouse.py
reflekt/amplitude/: api.py
reflekt/avo/: api.py  cli.py  errors.py  parser.py  plan.py  schema.py
reflekt/builder/: dbt.py  handler.py
reflekt/cli/: api_handler.py  cli.py  handler.py
reflekt/dbt/: docs.py
reflekt/iteratively/: api.py
reflekt/reflekt/: _global.py  api_handler.py  casing.py  cdp.py  cli.py  config.py  constants.py  dbt.py  dbt_templater.py  dumper.py  event.py  loader.py  plan.py  project.py  property.py  schema.py  templater.py  trait.py  transformer.py  transformer_old.py  transformer_v2.py  utils.py  warehouse.py
reflekt/registry/: avo.py  handler.py  segment.py
reflekt/reporter/: jsonschema2md.py  reporter.py
reflekt/rudderstack/: api.py
reflekt/segment/: api.py  columns.py  errors.py  parser.py  plan.py  schema.py
reflekt/snowplow/: api.py
reflekt/warehouse/: handler.py  warehouse.py
scripts/jaffle_shop/: jaffle_events.py  jaffle_events_old.py  jaffle_shop_sessions.py  jaffle_shop_sessions_old.py
tests/: build.py  fixtures.py  test_profile.py  test_project.py  test_reflekt_event.py  test_reflekt_loader.py  test_reflekt_plan.py  test_reflekt_property.py  test_reflekt_transformer.py  test_reporter.py  tests_reflekt_config.yml  tests_reflekt_project.yml
tests/fixtures/: reflekt_config.py  reflekt_event.py  reflekt_groups.py  reflekt_plan.py  reflekt_profiles.yml  reflekt_profiles_duplicate_source.yml  reflekt_project.py  reflekt_project.yml  reflekt_property.py  reflekt_trait.py  reflekt_users.py
tools/: jaffle_shop_sessions.py
utils/: make_events.py  send_events.py
(+599 files in other folders)
