[tool.poetry]
name = "reflekt"
version = "0.6.0"
license = "Apache-2.0"
description = "A CLI tool to define, govern, and model event data for warehouse-first product analytics."
authors = ["Gregory Clunies <greg@reflekt-ci.com>"]
readme = "README.md"
repository = "https://github.com/GClunies/Reflekt"
keywords = ["events", "jsonschema", "analytics", "business-intelligence", "data-modeling", "dbt", "snowflake", "redshift", "segment", "avo"]
include = ["reflekt/_templates/**/*", "reflekt/_validation/**/*"]

[tool.poetry.scripts]
reflekt = "reflekt.cli:app"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
typer = "^0.12.3"
rich = "^13.7.1"
loguru = "^0.7.2"
PyYAML = "^6.0.1"
GitPython = "^3.1.43"
jsonschema = "^4.22.0"
python-dotenv = "^1.0.1"
inflection = "^0.5.1"
sqlalchemy-redshift = "^0.8.14"
redshift-connector = "^2.1.2"
snowflake-sqlalchemy = "^1.5.3"
sqlalchemy-bigquery = "^1.11.0"
google-cloud-bigquery-storage = "^2.25.0"
segment-analytics-python = "^2.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
mypy = "^1.10.1"
tox = "^4.15.1"
ruff = "^0.5.0"
make = "^0.1.6.post2"
reuse = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-vv -p no:warnings --cov=reflekt tests/"
testpaths = ["tests"]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py39,py310,py311

[testenv]
allowlist_externals = poetry
commands =
    poetry install -v
    poetry run pytest tests/
"""
